<resources>
    <string name="app_name">ToDoList</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_register_page">Welcome to Register Page</string>
    <string name="welcome_to_login_page">Welcome to Login Page</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="email">E-mail</string>
    <string name="navigation_drawer_open">E-mail</string>
    <string name="navigation_drawer_close">E-mail</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="add_task">add task</string>
    <string name="title">title</string>
    <string name="category">category</string>
    <string name="description">description</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string-array name="task_categories">
        <item>Select Category</item>
        <item>Personal</item>
        <item>Work</item>
        <item>Home</item>
    </string-array>
</resources>